hotel and hotelphone changes